# conductor

./: .env.example  CHANGELOG.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  cli_help.py  conductor.py  conductor_delete.py  conductor_setup.py  conductor_update.py  config.json  install.sh  jira_branch_creator.py  pyproject.toml  settings.py  setup.py  version.py
.github/workflows/: release.yml
docs/: QUICK_REFERENCE.md  SETUP_GUIDE.md  TESTING_GUIDE.md
scripts/: bump_version.sh
