[project]
name = "conductor"
version = "1.0.2"
description = "Developer workflow toolkit"
authors = [
    {name = "Juan Feris"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["jira", "git", "branch", "workflow", "ticket"]
dependencies = [
    "gitpython>=3.1.45",
    "jira>=3.10.5",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/ferisjuan/conductor"
Repository = "https://github.com/ferisjuan/conductor"
Issues = "https://github.com/ferisjuan/conductor/issues"

[project.scripts]
conductor = "conductor:main"
conductor-setup = "setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
